<resources xmlns:xliff="http://schemas.android.com/tools">

    <!--
    XML code...
    -->
    <string name="app_name">Coffee App</string>
    <string name="price_name">Total: $10</string>
    <string name="topping_name">Topping</string>
    <string name="whippedCream_name">Whipped Cream</string>
    <string name="chocolate_name_xml">Chocolate</string>
    <string name="quantity_name">Quantity</string>
    <string name="order_name">Order</string>
    <string name="Type_a_name">Type a name</string>

    <!--
    Name for the order summary. It will be shown in the formatsof "Name: Amy" where Amy is the user's name.
    [CHAR LIMIT=NONE]
    -->
    <string name="order_summ_name">Name :
        <!--<xliff:g example="Amy" id="name">%s</xliff:g>-->
    </string>
    <string name="order_summ_whippedCream">Added Whipped Cream ? </string>
    <string name="order_summ_chocolate">Added Chocolate ? </string>
    <string name="order_summ_quantity">Quantity: </string>
    <string name="order_summ_total">Total: $</string>
    <string name="order_summ_thanks">Thank You!..</string>

    <string name="decrement_toast">Cannot order less than 1 Cup</string>
    <string name="increment_toast">Cannot order more than 10 Cup</string>

</resources>
